[package]
name = "unimap"
version = "0.5.1"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2018"
description = "Scan only once by IP address and reduce scan times with Nmap for large amounts of data."
repository = "https://github.com/edu4rdshl/unimap"
license = "GPL-3.0-or-later"
keywords = ["nmap", "scanning", "ip-scan", "scanner", "open-ports"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = "0.20.4"
rayon = "1.5.1"
log = { version = "0.4.14", features = ["std"] }
colored = { version = "2.0.0", optional = true }
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
prettytable-rs = "0.8.0"
serde-xml-rs = "0.5.1"
chrono = "0.4.19"
clap = { version = "2.34.0", features = ["yaml"] }
config = { version = "0.11.0", features = ["yaml", "json", "toml", "hjson", "ini"] }
failure = "0.1.8"

# https://github.com/bluejekyll/trust-dns/pull/1632
[patch.crates-io]
trust-dns-resolver = { git = "https://github.com/Findomain/trust-dns", package = "trust-dns-resolver", branch = "custombranch" }

[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"
winapi = { version = "0.3.9", features = ["handleapi", "winbase"] }


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
opt-level = "s"
